# opra-statistical-profiler

./: .gitignore  CODEBASE.md  Cargo.toml  README.md
configs/: nvda_opra_1day_test.toml  nvda_opra_8day.toml  nvda_opra_nov14.toml
src/: config.rs  contract.rs  event.rs  lib.rs  loader.rs  profiler.rs  report_utils.rs  test_helpers.rs
src/options_math/: bsm.rs  mod.rs  moneyness.rs
src/trackers/: effective_spread.rs  greeks.rs  mod.rs  premium_decay.rs  put_call.rs  quality.rs  spread.rs  volume.rs  zero_dte.rs
