[package]
name = "opra-statistical-profiler"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["nagarx"]
description = "High-performance statistical profiler for OPRA options microstructure analysis"
license = "LicenseRef-Proprietary"
readme = "README.md"
keywords = ["options", "opra", "hft", "microstructure", "statistics", "greeks"]
categories = ["finance", "science"]

[lib]
name = "opra_statistical_profiler"
path = "src/lib.rs"

[dependencies]
hft-statistics = { git = "https://github.com/nagarx/hft-statistics.git", branch = "main" }
dbn = { git = "https://github.com/databento/dbn.git", tag = "v0.20.0" }

ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
time = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "profile_opra"
path = "src/bin/profile_opra.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
